# feishu-msg-forwarder

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: config.example.yaml
src/feishu_msg_forwarder/: __init__.py  config.py  exceptions.py  logging_setup.py  models.py
src/feishu_msg_forwarder/auth/: callback_server.py  device_flow.py  oauth.py  token_resolver.py  token_store.py
src/feishu_msg_forwarder/cli/: main.py
src/feishu_msg_forwarder/db/: repositories.py  sqlite.py
src/feishu_msg_forwarder/feishu/: __init__.py  base_client.py  chat_api.py  media_api.py  message_api.py  search_api.py
src/feishu_msg_forwarder/rules/: matcher.py
src/feishu_msg_forwarder/services/: bootstrap.py  forwarder.py  ingestor.py  poller.py  transformer.py
